Fix for Layout Problem
- Fixed layout problem with Header
- Fixed layout problem with Sidebar
- Fixed padding problem with Sidenav Content

--- a/korera/src/app/component/header/header.component.css
+++ b/korera/src/app/component/header/header.component.css
@@ -7,7 +7,7 @@ body {
   border-bottom: 2px solid black;
   background-color: white;
   color: black;
-  height: 85px;
+  height: 86px;
 }
 
 button {
@@ -32,7 +32,7 @@ h3 {
 /* Column for Header Icon */
 .columnHeader {
   float: left;
-  width: 260px;
+  width: 259px;
 }
 
 /* Column for Project Name */
@@ -40,14 +40,15 @@ h3 {
   float: left;
   text-align: center;
   width: 60%;
-  line-height: 85px;
+  line-height: 80px;
+  margin-top: 15px;
 }
 
 /* Column for User Icon */
 .columnUser {
   float: left;
   width: 40px;
-  line-height: 85px;
+  line-height: 80px;
 }
 
 /* Column for Title Name */
@@ -55,14 +56,15 @@ h3 {
   float: left;
   text-align: center;
   width: 12%;
-  line-height: 85px;
+  line-height: 80px;
+  margin-top: 30px;
 }
 
 /* Column for Question Icon */
 .columnQuestion {
   float: left;
   width: 40px;
-  line-height: 85px;
+  line-height: 80px;
 }
 
 /* Clear floats after the columns */
