--- a/korera/src/app/component/sidebar/sidebar.component.css
+++ b/korera/src/app/component/sidebar/sidebar.component.css
@@ -13,7 +13,7 @@ body {
   font-size: 18px;
   font-style: bold;
   font-weight: lighter;
-  width: 260px;
+  width: 259px;
 }
 
 /* Unvisited link */
